warehouse/force-app/main/default/objects/ProductOrders__x/ProductOrders__x.object-meta.xml
<CustomObject>
    <description>ProductOrders</description>
    <externalDataSource>Warehouse</externalDataSource>
    <externalName>ProductOrders</externalName>
    <label>Product Order</label>
    <pluralLabel>Product Orders</pluralLabel>
</CustomObject>