warehouse/force-app/main/default/objects/ProductOrders__x/fields/AskedQuantity__c.field-meta.xml
<CustomField>
    <fullName>AskedQuantity__c</fullName>
    <description>AskedQuantity</description>
    <externalDeveloperName>AskedQuantity</externalDeveloperName>
    <label>AskedQuantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>