warehouse/force-app/main/default/objects/ProductOrders__x/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <externalDeveloperName>CustomerName</externalDeveloperName>
    <label>Customer Name</label>
    <length>50</length>
    <referenceTargetField>Customer__c.Name__c</referenceTargetField>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Product Orders</relationshipLabel>
    <relationshipName>Product_Orders</relationshipName>
    <type>IndirectLookup</type>
</CustomField>