warehouse/force-app/main/default/objects/ProductOrders__x/fields/OrderedOn__c.field-meta.xml
<CustomField>
    <fullName>OrderedOn__c</fullName>
    <description>OrderedOn</description>
    <externalDeveloperName>OrderedOn</externalDeveloperName>
    <label>OrderedOn</label>
    <type>DateTime</type>
</CustomField>