warehouse/force-app/main/default/objects/ProductOrders__x/fields/OrderPrice__c.field-meta.xml
<CustomField>
    <fullName>OrderPrice__c</fullName>
    <description>OrderPrice</description>
    <externalDeveloperName>OrderPrice</externalDeveloperName>
    <label>OrderPrice</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>