warehouse/force-app/main/default/objects/ProductOrders__x/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <description>ProductId</description>
    <externalDeveloperName>ProductId</externalDeveloperName>
    <label>ProductId</label>
    <length>12</length>
    <referenceTo>Products__x</referenceTo>
    <relationshipLabel>ProductOrders</relationshipLabel>
    <relationshipName>ProductOrders</relationshipName>
    <type>ExternalLookup</type>
</CustomField>