warehouse/force-app/main/default/objects/ProductOrders__x/fields/ProductOrderId__c.field-meta.xml
<CustomField>
    <fullName>ProductOrderId__c</fullName>
    <description>ProductOrderId</description>
    <externalDeveloperName>ProductOrderId</externalDeveloperName>
    <label>ProductOrderId</label>
    <length>128</length>
    <type>Text</type>
</CustomField>