warehouse/force-app/main/default/objects/ProductOrders__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ProductId__c</columns>
    <columns>ProductName__c</columns>
    <columns>OrderedOn__c</columns>
    <columns>OrderPrice__c</columns>
    <columns>Quantity__c</columns>
    <columns>AskedQuantity__c</columns>
    <columns>ExternalId</columns>
    <columns>Id</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>